--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,28 @@ services:
       - VITE_API_BASE_URL=/api
       - VITE_MAX_FILE_SIZE=10485760
       - VITE_BATCH_SIZE=100
+
+    # LABELS TRAEFIK - Configuration pour Coolify/Traefik
+    labels:
+      # Enable Traefik for this container
+      - "traefik.enable=true"
+
+      # HTTP Router configuration
+      - "traefik.http.routers.siret-frontend.rule=Host(`siretextractor.lasupermachine.fr`)"
+      - "traefik.http.routers.siret-frontend.entrypoints=websecure"
+      - "traefik.http.routers.siret-frontend.tls=true"
+      - "traefik.http.routers.siret-frontend.tls.certresolver=letsencrypt"
+
+      # Service configuration - point to port 80 inside container
+      - "traefik.http.services.siret-frontend.loadbalancer.server.port=80"
+
+      # HTTP to HTTPS redirect
+      - "traefik.http.routers.siret-frontend-http.rule=Host(`siretextractor.lasupermachine.fr`)"
+      - "traefik.http.routers.siret-frontend-http.entrypoints=web"
+      - "traefik.http.routers.siret-frontend-http.middlewares=https-redirect"
+      - "traefik.http.middlewares.https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.https-redirect.redirectscheme.permanent=true"
+
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
       interval: 30s
