Fix: Add SERVICE_URL_FRONTEND_80 for Coolify auto-routing
- Added SERVICE_URL_FRONTEND_80 environment variable
- Coolify pattern: SERVICE_URL_<NAME>_<PORT> for automatic Traefik config
- Matches dashy and linkding examples (Coolify auto-management)
- Frontend listens on port 80, Coolify will route traffic automatically

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,7 @@ services:
       backend:
         condition: service_healthy
     environment:
+      - SERVICE_URL_FRONTEND_80
       - VITE_API_BASE_URL=/api
       - VITE_MAX_FILE_SIZE=10485760
       - VITE_BATCH_SIZE=100
