--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,25 @@ services:
       - VITE_API_BASE_URL=/api
       - VITE_MAX_FILE_SIZE=10485760
       - VITE_BATCH_SIZE=100
+
+    # Traefik labels - Manual fix for Coolify custom domain bug
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.middlewares.gzip.compress=true"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.http-0-frontend.entryPoints=http"
+      - "traefik.http.routers.http-0-frontend.middlewares=redirect-to-https"
+      - "traefik.http.routers.http-0-frontend.rule=Host(`siretextractor.lasupermachine.fr`) && PathPrefix(`/`)"
+      - "traefik.http.routers.http-0-frontend.service=http-0-frontend"
+      - "traefik.http.routers.https-0-frontend.entryPoints=https"
+      - "traefik.http.routers.https-0-frontend.middlewares=gzip"
+      - "traefik.http.routers.https-0-frontend.rule=Host(`siretextractor.lasupermachine.fr`) && PathPrefix(`/`)"
+      - "traefik.http.routers.https-0-frontend.service=https-0-frontend"
+      - "traefik.http.routers.https-0-frontend.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.https-0-frontend.tls=true"
+      - "traefik.http.services.http-0-frontend.loadbalancer.server.port=80"
+      - "traefik.http.services.https-0-frontend.loadbalancer.server.port=80"
+
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
       interval: 30s
