Fix: Use Coolify network for Traefik routing
- Changed both backend and frontend to coolify network
- Declared coolify as external network (managed by Coolify)
- Removed siret-network definition
- Resolves 503 error: Traefik can now reach containers on same network
- Root cause: Network isolation prevented Traefik (coolify) from reaching containers (siret-network)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
 
     # Network
     networks:
-      - siret-network
+      - coolify
 
   frontend:
     build:
@@ -119,8 +119,8 @@ services:
         max-file: "3"
         tag: "siret-extractor-frontend"
     networks:
-      - siret-network
+      - coolify
 
 networks:
-  siret-network:
-    driver: bridge
+  coolify:
+    external: true
