--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -42,6 +42,22 @@ server {
         proxy_read_timeout 300s;
     }
 
+    # FastAPI documentation proxy (Swagger UI at /docs, ReDoc at /redoc)
+    location /backend-docs {
+        proxy_pass http://backend:8000/docs;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /openapi.json {
+        proxy_pass http://backend:8000/openapi.json;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
     # Health endpoint (for backend proxy)
     location /health {
         access_log off;
